<resources>
    <string name="app_name">SampleApp</string>
    <string name="authenticate">Authenticate</string>
    <string name="inputLabel">Input</string>
    <string name="encrypt">Encrypt</string>
    <string name="createEncryptionKey">Create\nencryption\nkey</string>
    <string name="removeEncryptionKey">Remove\nencryption\nkey</string>
    <string name="accessLevel_authentication_required">Authentication required</string>
    <string name="accessLevel_always">Available always</string>
    <string name="ivLabel">Initialization vector</string>
    <string name="cipherTextLabel">Cipher text</string>
    <string name="decrypt">Decrypt</string>
    <string name="decryptAsymmetrically">Decrypt\nasymmetrically</string>
    <string name="createAsymmetricEncryptionKey">Create asymmetric\nencryption key</string>
    <string name="removeAsymmetricEncryptionKey">Remove asymmetric\nencryption key</string>
    <string name="encryptAsymmetrically">Encrypt\nasymmetrically</string>
    <string name="encryptSymmetrically">Encrypt\nsymmetrically</string>
    <string name="encryptSymmetricallyWithPassword">Encrypt\nwith password</string>
    <string name="encryptSymmetricallyWithPasswordTitle">Encrypt with password</string>
    <string name="decryptSymmetricallyWithPassword">Decrypt\nwith password</string>
    <string name="passwordLabel">Password</string>
    <string name="saltLabel">Salt</string>
    <string name="iterationsLabel">Iterations</string>
    <string name="clear">Clear</string>
    <string name="sign">Sign</string>
    <string name="signature">Signature</string>
    <string name="publicKey">Public key</string>
    <string name="createSigningKey">Create\nsigning\nkey</string>
    <string name="removeSigningKey">Remove\nsigning\nkey</string>
    <string name="verifySignature">Verify\nsignature</string>
    <string name="publicKeyHint">Leave public key input empty to use local public key for signature verification.</string>
</resources>