<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textSize="@dimen/title_font_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/inputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_padding_x2"
        android:labelFor="@id/input"
        android:text="@string/inputLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLabel" />

    <TextView
        android:id="@+id/publicKeyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/publicKey"
        android:text="@string/publicKey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <EditText
        android:id="@+id/publicKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicKeyLabel" />

    <TextView
        android:id="@+id/signatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/signature"
        android:text="@string/signature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicKey" />

    <EditText
        android:id="@+id/signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signatureLabel" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/authenticationRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signature" />

    <TextView
        android:id="@+id/publicKeyHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publicKeyHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticationRequired" />

    <Button
        android:id="@+id/createKeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createSigningKey" />

    <Button
        android:id="@+id/removeKeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeSigningKey" />

    <Button
        android:id="@+id/signButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign" />

    <Button
        android:id="@+id/verifySignatureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifySignature" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_padding"
        android:orientation="horizontal"
        app:constraint_referenced_ids="createKeyButton,removeKeyButton,signButton,verifySignatureButton"
        app:flow_horizontalGap="20dp"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publicKeyHint" />


</androidx.constraintlayout.widget.ConstraintLayout>